# sir_lsq_dialog

./: CMakeLists.txt  README.md  lsq_fortran.f90  lsqdialog.cpp  lsqdialog.h  lsqdialog.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  weightparamsdialog.cpp  weightparamsdialog.h  weightparamsdialog.ui
